testsuite/tests/checks/separate_numeric_error/test.out
exc.adb:6:12: error: Constraint_Error is handled separately from Numeric_Error
6 |       when Numeric_Error =>   --  FLAG
  |            ^^^^^^^^^^^^^ 

exc.adb:18:9: error: Constraint_Error is handled separately from Numeric_Error
18 |    when Constraint_Error =>   --  FLAG
   |         ^^^^^^^^^^^^^^^^ 

